# gem-plotting-tools

./: .github_changelog_generator  .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  Makefile  README.md  __init__.py  anaDACScan.py  anaInfo.py  anaSBitMonitor.py  anaSBitReadout.py  anaSBitThresh.py  anaUltraLatency.py  anaUltraScurve.py  anaUltraThreshold.py  anaXDAQLatency.py  ana_scans.py  anaoptions.py  anautilities.py  packageFiles4Docker.py  requirements-dev.txt  requirements.txt
.ci/: docker.sh  test_on_docker.sh  travis.sh
.github/: CONTRIBUTING.md
.travis/: docker.sh  test_on_docker.sh  travis.sh
doc/: .gitignore  Makefile  analyzing-scans.rst  coding.rst  conf.py  fitting.rst  gempython.gemplotting.fitting.rst  gempython.gemplotting.macros.rst  gempython.gemplotting.mapping.rst  gempython.gemplotting.utils.rst  index.rst  macros.rst  man-index.rst  mapping.rst  masking.rst  scandate-list-formats.rst  scurve-plotting-tools.rst  setup.rst  utils.rst
doc/man/: anaDACscan.rst  anaSBitReadout.rst  clusterAnaScurve.rst  gemSCurveAnaToolkit.rst  gemTreeDrawWrapper.rst  packageFiles4Docker.rst  plotSCurveFitResults.rst  plotTimeSeriesHV.rst
doc/modules/mapping/: amcInfo.rst
doc/modules/utils/: anaoptions.rst  dbutils.rst
doc/source/: conf.py  index.rst  man-index.rst  masking.rst  modules-index.rst  scripts.rst  scurve-plotting-tools.rst
doc/source/man/: anaDACScan.rst  gemPlotter.rst  makePhaseScanPlots.rst  plotChanLossRate.rst  plot_eff.rst  timeHistoryAnalyzer.rst
doc/source/modules/fitting/: fitScanData.rst
doc/source/modules/mapping/: PanChannelMaps.rst  chamberInfo.rst  channelMaps.rst
doc/source/modules/utils/: anaInfo.rst  anahistory.rst  anautilities.rst  exceptions.rst  latAlgos.rst  multiprocUtils.rst  scurveAlgos.rst  threshAlgos.rst
fitting/: fitScanData.py
latency/: LatencyScanData.py  anaUltraLatency.py
macros/: calibrateThrDac.py  clusterAnaScurve.py  fitScanData.py  gemPlotter.py  gemPlotterAllChannels.sh  gemSCurveAnaToolkit.py  gemTreeDrawWrapper.py  makePhaseScanPlots.py  overlay_fit.py  plotChanLossRate.py  plotLatComp.py  plotSCurveFitResults.py  plotSbitThreshComp.py  plotTimeSeries.py  plotTimeSeriesHV.py  plot_eff.py  plot_noise_vs_trim.py  plot_scurve.py  plot_scurves_by_thresh.py  plot_vfat_and_channel_Scurve.py  plot_vfat_summary.py  plotoptions.py  scurvePlottingUtitilities.py  summary_plots.py  timeHistoryAnalyzer.py  timeHistoryAnalyzerAllRanges.sh
mapping/: PanChannelMaps.py  amcInfo.py  buildMapFiles.py  chamberInfo.py  channelMaps.py  longChannelMap_VFAT3-HV3b-V1_V2_V4.txt  longChannelMap_VFAT3-HV3b-V3.txt  shortChannelMap_VFAT3-HV3b-V1_V2_V4.txt  shortChannelMap_VFAT3-HV3b-V3.txt
pkg/: installrpm.sh  postinstallrpm.sh  setup.cfg  setup.py
setup/: buildMapFiles.py  createVirtualEnvPy26.sh  createVirtualEnvPy27.sh  paths.sh
utils/: anaInfo.py  anahistory.py  anaoptions.py  anautilities.py  dbutils.py  exceptions.py  latAlgos.py  multiprocUtils.py  scurveAlgos.py  threshAlgos.py
