[metadata]
name = gempython_gemplotting
# name = gemplotting
author = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary = __summary__
license = MIT
description-file = gempython/gemplotting/README.md
home-page = https://cms-gem-daq-project.github.io/gem-plotting-tools
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/gem-plotting-tools
    Source Code   = https://github.com/cms-gem-daq-project/gem-plotting-tools
    Bug Tracker   = https://github.com/cms-gem-daq-project/gem-plotting-tools/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Data Acquisition
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python [files]
# scripts = gempython/gemplotting/bin/*.py
#     gempython/gemplotting/bin/ana_scans.py
#     gempython/gemplotting/bin/anaUltraLatency.py
#     gempython/gemplotting/bin/anaUltraScurve.py
#     gempython/gemplotting/bin/anaUltraThreshold.py
#     gempython/gemplotting/bin/anaXDAQLatency.py

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
    gempython

packages =
#    gemplotting
     'gempython.gemplotting'
     'gempython.gemplotting.macros'
     'gempython.gemplotting.fitting'
     'gempython.gemplotting.mapping'

data_files =
    /opt/cmsgemos/bin = gempython/gemplotting/bin/*.py
        # gempython/gemplotting/bin/ana_scans.py
        # gempython/gemplotting/bin/anaUltraLatency.py
        # gempython/gemplotting/bin/anaUltraScurve.py
        # gempython/gemplotting/bin/anaUltraThreshold.py
        # gempython/gemplotting/bin/anaXDAQLatency.py

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs

[bdist_rpm]
requires = python >= 2.6
           django >= 1.9
           cmsgemos-gempython >= 0.3.1
           numpy >= 1.7
           root_numpy >= 4.7
