[metadata]
name = gempython_gemplotting
# name = gemplotting
author = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary = __summary__
license = MIT
description-file = gempython/gemplotting/README.md
home-page = https://cms-gem-daq-project.github.io/gem-plotting-tools
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/gem-plotting-tools
    Source Code   = https://github.com/cms-gem-daq-project/gem-plotting-tools
    Bug Tracker   = https://github.com/cms-gem-daq-project/gem-plotting-tools/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Data Acquisition
    Topic :: Scientific
    Topic :: Utilities
    License :: OSI Approved :: MIT
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python [files]

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
    gempython

packages =
     'gempython.gemplotting.macros'
     'gempython.gemplotting.fitting'
     'gempython.gemplotting.mapping'

data_files =

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs

[install]

[bdist_rpm]
requires = python >= 2.6
           cmsgemos-gempython >= 0.3.1
           numpy >= 1.7
           root_numpy >= 4.7
install_script = installrpm.sh
